--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "homepage": "https://github.com/Taran-Dorland/ChattererV2#readme",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.1",
     "@popperjs/core": "^2.1.1",
     "bootstrap": "^4.4.1",
     "cookie-parser": "~1.4.4",
